--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,22 @@ FakesAssemblies/
 
 # Jeff's additions
 doxygen/
+.vs/HexGrid/v15/Server/sqlite3/db.lock
+
+.vs/HexGrid/v15/Server/sqlite3/storage.ide
+
+.vs/HexGrid/v15/Server/sqlite3/storage.ide-shm
+
+.vs/HexGrid/v15/Server/sqlite3/storage.ide-wal
+
+.vs/HexGrid/v16/Server/sqlite3/db.lock
+
+.vs/HexGrid/v16/Server/sqlite3/storage.ide
+
+.vs/HexGrid/v16/Server/sqlite3/storage.ide-shm
+
+.vs/HexGrid/v16/Server/sqlite3/storage.ide-wal
+
+.vs/HexGrid/v16/TestStore/0/000-0000.testlog
+
+.vs/HexGrid/v16/TestStore/0/testlog.manifest
